slave01/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: mlkyoto
  annotations:
    traefik.frontend.rule.type: PathPrefixStrip
spec:
  rules:
  - http:
      paths:
      - path: /slave01
        backend:
          serviceName: mlkyoto
          servicePort: 7000
